# claude-notify-gnome

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  TERMINAL_FOCUS_METHODS.md  claude-focus-service.py  claude-focus.service  claude_focus.service  claude_focus_service.py  claude_terminal_focuser.py  focus_service.py  gnome_terminal_tabs.py  install-service.sh  install_service.sh  notify-hook.py  notify_hook.py  pyproject.toml  settings.json  terminal-finder.py  terminal_finder.py  test_dbus_tab_switch.py
.claude/agents/: wayland-workaround-architect.md
.github/workflows/: ci.yml
docker/: docker-compose.test.yml
docker/claude-test/: Dockerfile  entrypoint.sh
docker/gnome-test/: Dockerfile  entrypoint.sh  weston.ini
docs/: REQUIREMENTS.md
docs/plans/: 2025-12-05-v2-architecture-design.md  2025-12-05-v2-implementation-plan.md  2025-12-07-installation-and-testing-design.md  2025-12-08-installation-and-testing-implementation.md
examples/: terminal_tabs_example.py
src/claude_notify/daemon/: main.py  server.py
src/claude_notify/gnome/: __init__.py  notifications.py
src/claude_notify/hook/: main.py  protocol.py
src/claude_notify/install/: __init__.py  hooks.py  main.py  systemd.py
tests/: test_events.py  test_friendly_names.py  test_hook_main.py  test_install_hooks.py  test_install_systemd.py  test_integration.py  test_notifications.py  test_protocol.py  test_registry.py  test_server.py  test_socket_activation.py  test_state.py
tests/e2e/: __init__.py  conftest.py  test_hook_to_daemon.py  test_notifications.py  test_real_claude.py
(+7 files in other folders)
