[project]
name = "claude-notify-gnome"
version = "2.0.0"
description = "Desktop notifications for Claude Code on GNOME"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = []

[project.optional-dependencies]
daemon = [
    "dbus-python>=1.3.2",
    "PyGObject>=3.42.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
claude-notify-hook = "claude_notify.hook.main:main"
claude-notify-daemon = "claude_notify.daemon.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
